fix: responsive on small screens

--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@ p {
     }
     .result-wrap {
         max-width: 70%;
+        padding: 12px 24px;
 
     }
 }
